[package]
name = "hlocl"
description = "High-level bindings for OpenCL"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
keywords = ["gpgpu", "opencl", "ocl", "opencl-framework", "ocl-framework"]
categories = ["api-bindings", "asynchronous", "concurrency", "external-ffi-bindings", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["def"]
cl2 = ["opencl-sys/CL_VERSION_2_0"]
async = ["futures", "future-parking_lot", "error-stack?/futures"]
def = []
rand = []

[dependencies]
opencl-sys = { version = "0.2.1" }
once_cell = "1.12.0"
cfg-if = "1"
bitflags = "1"
elor = "1"
parking_lot = "0.9.0"
num-traits = "0.2.15"
error-stack = { version = "0.1.0", optional = true }
future-parking_lot = { version = "0.3.3", optional = true }
futures = { version = "0.3.21", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"